# Here_Backend

./: .gitignore  CURRENT_USER_EXTRACTOR.md  Cargo.toml  README.md  SHUTTLE_SECRETS_CONFIG.md  here.db
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs
src/core/: configs.rs
src/docs/: mod.rs
src/entities/: attendance.rs  attendee.rs  categories_join.rs  event.rs  event_categories.rs  event_category.rs  host.rs  link.rs  mod.rs  motivation.rs  preference.rs  user.rs  user_motivations.rs
src/entity/: attendance.rs  attendee.rs  attendee_motivations.rs  categories_join.rs  event.rs  event_categories.rs  host.rs  link.rs  location.rs  mod.rs  motivation.rs  prelude.rs  skills.rs  types.rs  user.rs
src/handlers/: auth.rs  users.rs
src/routes/: auth.rs  mod.rs  users.rs
src/schemas/: auth.rs  user.rs
src/services/: users.rs
src/utils/: auth_extractor.rs  utils.rs
