[package]
name = "here"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.11.0"
deadpool-redis = "0.22.0"
dotenv = "0.15.0"
utoipa = "5.4.0"
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web","reqwest"] }
redis = { version = "0.32.7", features = ["r2d2", "tokio-comp"] }
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros","debug-print"] }
bcrypt = "0.17.1"
config = "0.15.18"
tracing = "0.1.41"
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = "0.4.42"

#NOTE - Keep the sea-orm-migration version in sync with the migration/Cargo.toml
migration = { path = "migration" }
serde_json = "1.0.145"
