[package]
name = "here"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlx-sqlite"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]

[dependencies]
actix-web = "4.11.0"
deadpool-redis = "0.22.0"
dotenv = "0.15.0"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web","reqwest"] }
redis = { version = "0.32.7", features = ["r2d2", "tokio-comp"] }
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
sea-orm = { version = "2.0.0-rc", features = ["runtime-tokio-rustls", "macros","debug-print","entity-registry","schema-sync","sqlx-postgres","sqlx-sqlite"] }
bcrypt = "0.17.1"
config = "0.15.18"
tracing = "0.1.41"
once_cell = "1.21.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = "0.4.42"
serde_json = "1.0.145"
postgis = "0.9.0"
shuttle-runtime = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres", "sqlx"] }
shuttle-actix-web = "0.57.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
